--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div id="score">Score:0</div>
     <div id="message"></div>
     <div id="game">
-        <img id="hero" class="hero" src="/img/superhero.png"></img>
+        <img id="hero" class="hero" src="img/superhero.png"></img>
 
 </body>
 
