a bunch of messy code

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Space Game</title>
     <script src="script.js" defer></script>
     <style>
+        #game, body{
+            overflow: hidden;
+        }
+
         #hero {
-
-
             text-align: center;
             position: absolute;
             width: 50px;
@@ -19,7 +21,6 @@
         }
 
         .enemy {
-
             text-align: center;
             position: absolute;
             width: 50px;
